NGINX_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
  annotations:
     service.beta.kubernetes.io/aws-load-balancer-scheme: internal
spec:
  type: LoadBalancer
  selector: 
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
