NGINX_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing         # Ensure alb is reachable to public
    alb.ingress.kubernetes.io/target-type: ip                 # Traffic will route directly to pod's ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS"}]'  # Specifies the ports that ALB used to listen on

    external-dns.alpha.kubernetes.io/hostname: tracker.robs-portfolio.com
spec:
  ingressClassName: alb # Needed for controller to reach ingress
  rules:
    - host: tracker.robs-portfolio.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port: 
                number: 8080

  tls:
  - hosts:
    - tracker.robs-portfolio.com
    secretName: aws-load-balancer-tls
